--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,52 @@
-node_modules
+# Игнорировать папку зависимостей
+node_modules/
+
+# Игнорировать папки сборки
+dist/
+.angular/
+build/
+
+# Игнорировать кэши и временные файлы
+.cache/
+.tmp/
+
+# Игнорировать настройки IDE
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Игнорировать логи и отчеты
+logs/
+coverage/
+*.log
+
+# Игнорировать системные файлы
+.DS_Store
+Thumbs.db
+
+# Игнорировать файлы среды
+.env
+.env.local
+.env.*.local
+
+# Игнорировать файлы сборки
+*.js.map
+*.d.ts
+*.ngsummary.json
+*.ngfactory.json
+
+# Игнорировать резервные копии
+*.bak
+
+# Игнорировать специфичные для npm/yarn файлы
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Игнорировать тестовые результаты
+/test-results/
+/screenshots/
